--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lemontest11",
-  "version": "1.0.11",
-  "description": "UI library For Vue",
+  "name": "ck-view",
+  "version": "1.0.1",
+  "description": "可视化大屏UI库",
   "main": "lib/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
