--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev": "webpack-dev-server --config ./build/webpack.dev.js --hot",
     "build": "npm run lib:all && npm run lib:component",
     "lib:all": "webpack --config ./build/webpack.lib.prod.js",
@@ -30,6 +30,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@vue/babel-plugin-transform-vue-jsx": "^1.4.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-component": "^1.1.1",
@@ -37,23 +41,6 @@
     "copy-webpack-plugin": "^5.1.0",
     "css-loader": "^3.2.1",
     "dart-sass": "^1.23.7",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "normalize.css": "^8.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
-    "postcss-pxtorem": "^4.0.1",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.1",
-    "url-loader": "^3.0.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
     "eslint": "^9.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -62,12 +49,27 @@
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.29.1",
-    "@rushstack/eslint-patch": "^1.10.4",
-    "@vue/babel-plugin-transform-vue-jsx": "^1.4.0",
-    "@vue/babel-preset-jsx": "^1.4.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^25.0.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-pxtorem": "^4.0.1",
     "prettier": "^3.3.3",
-    "webpack": "^4.41.2"
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "url-loader": "^3.0.0",
+    "vitest": "^2.1.8",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
   "peerDependencies": {
     "vue": "^2.6.10"
