--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lemon-ui-vue2",
-  "version": "1.2.20",
+  "version": "1.3.20",
   "description": "可视化大屏UI库",
   "main": "lib/lemonui.js",
   "scripts": {
@@ -18,6 +18,10 @@
     "type": "git",
     "url": "https://github.com/the-lemonboy/lemon-ui"
   },
+  "files": [
+    "README.md",
+    "lib/"
+  ],
   "keywords": [
     "UI",
     "Vue",
@@ -41,7 +45,7 @@
     "copy-webpack-plugin": "^5.1.0",
     "css-loader": "^3.2.1",
     "dart-sass": "^1.23.7",
-    "eslint": "^9.13.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -55,8 +59,6 @@
     "mini-css-extract-plugin": "^0.8.0",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
-    "postcss-pxtorem": "^4.0.1",
     "prettier": "^3.3.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
