--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "vue": "^2.6.10"
   },
   "dependencies": {
+    "compression-webpack-plugin": "^11.1.0",
     "core-js": "^2.6.10",
     "css-loader": "^3.6.0",
     "deepmerge": "^4.3.1",
